--- a/.github/workflows/create_resource.yml
+++ b/.github/workflows/create_resource.yml
@@ -21,9 +21,19 @@ jobs:
     - name: Azure-connect
       run: az login --service-principal -u ${{ secrets.CLIENT_ID }} -p ${{ secrets.CLIENT_SECRET }} -t ${{ secrets.TENANT_ID }}
       
-    - name: Run Arm
-      uses: azure/arm-deploy@v1
-      with: 
-        subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
-        resourceGroupName: ${{ secrets.AZURE_RG }}
-        template: ./v-net.json
+#     - name: Run Arm
+#       uses: azure/arm-deploy@v1
+#       with: 
+#         subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+#         resourceGroupName: ${{ secrets.AZURE_RG }}
+#         template: ./v-net.json
+    - name: Azure run
+      run : |
+        az network vnet create \
+        --name v-netber \
+        --resource-group user_KPLMMZYKUL_ResourceGroup \
+        --subnet-name subnet-1 --subnet-prefixes 10.0.1.0/24
+        
+        
+        
+        
