--- a/.github/workflows/create_resource.yml
+++ b/.github/workflows/create_resource.yml
@@ -34,6 +34,16 @@ jobs:
         --resource-group user_KPLMMZYKUL_ResourceGroup \
         --subnet-name subnet-1 --subnet-prefixes 10.0.1.0/24
         
-        
-        
-        
+    - name: Terraform Init
+      run: terraform init 
+    
+    - name: Terraform Plan
+      run: terraform plan -input=false
+      continue-on-error: true
+      
+    - name: Terraform Plan Status
+      if: steps.plan.outcome == 'failure'
+      run: "exit 1"
+    
+    - name: Terraform Apply
+      run: terraform apply -auto-approve -input=false
