--- a/.github/workflows/create_resource.yml
+++ b/.github/workflows/create_resource.yml
@@ -38,12 +38,13 @@ jobs:
       run: terraform init 
     
     - name: Terraform Plan
+      id: plan
       run: terraform plan -input=false
       continue-on-error: true
       
-    - name: Terraform Plan Status
-      if: steps.plan.outcome == 'failure'
-      run: "exit 1"
+#     - name: Terraform Plan Status
+#       if: steps.plan.outcome == 'failure'
+#       run: "exit 1"
     
-    - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false
+#     - name: Terraform Apply
+#       run: terraform apply -auto-approve -input=false
