--- a/.github/workflows/create_resource.yml
+++ b/.github/workflows/create_resource.yml
@@ -9,6 +9,12 @@ jobs:
     name: 'Azure-env'
     runs-on: ubuntu-latest
     environment: production
+    env: 
+      subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+      clientId: ${{ secrets.CLIENT_ID }}
+      clientSecret: ${{ secrets.CLIENT_SECRET }}
+      tenantId: ${{ secrets.TENANT_ID }}
+      
 
     defaults:
       run:
