--- a/.github/workflows/create_resource.yml
+++ b/.github/workflows/create_resource.yml
@@ -51,9 +51,9 @@ jobs:
       run: terraform plan -input=false
       continue-on-error: true
       
-#     - name: Terraform Plan Status
-#       if: steps.plan.outcome == 'failure'
-#       run: "exit 1"
+    - name: Terraform Plan Status
+      if: steps.plan.outcome == 'failure'
+      run: "exit 1"
     
-#     - name: Terraform Apply
-#       run: terraform apply -auto-approve -input=false
+    - name: Terraform Apply
+      run: terraform apply -auto-approve -input=false
