--- a/.github/workflows/create_resource.yml
+++ b/.github/workflows/create_resource.yml
@@ -28,8 +28,8 @@ jobs:
 #       uses: azure/login@v1
 #       with: 
 #         creds: ${{secrets.AZURE_CREDS}}
-#     - name: Azure-connect
-#       run: az login --service-principal -u ${{ secrets.CLIENT_ID }} -p ${{ secrets.CLIENT_SECRET }} --tenant ${{ secrets.TENANT_ID }}
+    - name: Azure-connect
+      run: az login --service-principal -u ${{ secrets.CLIENT_ID }} -p ${{ secrets.CLIENT_SECRET }} --tenant ${{ secrets.TENANT_ID }}
 #     - name: Run Arm
 #       uses: azure/arm-deploy@v1
 #       with: 
