--- a/.github/workflows/create_resource.yml
+++ b/.github/workflows/create_resource.yml
@@ -1,7 +1,7 @@
 name: 'resource-for-azure'
 
-on: [workflow_dispatch]
-
+# on: [workflow_dispatch]
+on: push
 permissions: write-all
 
 jobs:
@@ -28,8 +28,8 @@ jobs:
 #       uses: azure/login@v1
 #       with: 
 #         creds: ${{secrets.AZURE_CREDS}}
-    - name: Azure-connect
-      run: az login --service-principal -u ${{ secrets.CLIENT_ID }} -p ${{ secrets.CLIENT_SECRET }} --tenant ${{ secrets.TENANT_ID }}
+#     - name: Azure-connect
+#       run: az login --service-principal -u ${{ secrets.CLIENT_ID }} -p ${{ secrets.CLIENT_SECRET }} --tenant ${{ secrets.TENANT_ID }}
 #     - name: Run Arm
 #       uses: azure/arm-deploy@v1
 #       with: 
@@ -42,18 +42,21 @@ jobs:
 #         --name v-netber \
 #         --resource-group user_KPLMMZYKUL_ResourceGroup \
 #         --subnet-name subnet-1 --subnet-prefixes 10.0.1.0/24
-        
-    - name: Terraform Init
-      run: terraform init 
+  
+    - name: py check
+      run: python --version
+  
+#     - name: Terraform Init
+#       run: terraform init 
     
-    - name: Terraform Plan
-      id: plan
-      run: terraform plan -input=false
-      continue-on-error: true
+#     - name: Terraform Plan
+#       id: plan
+#       run: terraform plan -input=false
+#       continue-on-error: true
       
-    - name: Terraform Plan Status
-      if: steps.plan.outcome == 'failure'
-      run: "exit 1"
+#     - name: Terraform Plan Status
+#       if: steps.plan.outcome == 'failure'
+#       run: "exit 1"
     
-    - name: Terraform Apply
-      run: terraform apply -auto-approve -input=false
+#     - name: Terraform Apply
+#       run: terraform apply -auto-approve -input=false
