--- a/.github/workflows/create_resource.yml
+++ b/.github/workflows/create_resource.yml
@@ -65,13 +65,13 @@ jobs:
         npm install -g azure-functions-core-tools@4 --unsafe-perm true
         func init LocalFunctionProj --python
         cd LocalFunctionProj
-        func new --name Servicebuser --template "Azure Service Bus Queue trigger" --authlevel "anonymous"
+        func new --name Servicebuser --template "Azure Service Bus Queue trigger"
 
 
         # for output
         func templates list -l python
 
-        func start
+        func start 
         func azure functionapp publish linux-function-app-for-azure
       
 
