--- a/.github/workflows/create_resource.yml
+++ b/.github/workflows/create_resource.yml
@@ -14,7 +14,9 @@ jobs:
       ARM_CLIENT_ID: ${{ secrets.CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
       ARM_TENANT_ID: ${{ secrets.TENANT_ID }}
-      
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_REGION: "ap-southeast-1"    
 
     defaults:
       run:
@@ -44,7 +46,7 @@ jobs:
 #         --subnet-name subnet-1 --subnet-prefixes 10.0.1.0/24
   
     - name: Terraform Init
-      run: terraform init 
+      run: terraform init --backend-config=conf.tfvars
     
     - name: Terraform Plan
       id: plan
