--- a/.github/workflows/delete.yml
+++ b/.github/workflows/delete.yml
@@ -28,7 +28,7 @@ jobs:
       run: az login --service-principal -u ${{ secrets.CLIENT_ID }} -p ${{ secrets.CLIENT_SECRET }} --tenant ${{ secrets.TENANT_ID }}
   
     - name: Terraform Init
-      run: terraform init --backend-config=conf.tfvars
+      run: terraform init 
     
     - name: Terraform destroy
       run: terraform destroy -auto-approve -input=false
